[gd_scene load_steps=59 format=2]

[ext_resource path="res://scripts/characters/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/player_all.png" type="Texture" id=2]
[ext_resource path="res://assets/images/light-radius.png" type="Texture" id=3]
[ext_resource path="res://scripts/effects/LightFlicker.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.20772
height = 8.91072

[sub_resource type="Animation" id=2]
resource_name = "AttackDown"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finish"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "AttackLeft"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finish"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "AttackRight"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finish"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "AttackUp"
length = 0.4
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finish"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "IdleDown_carry"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=9]
resource_name = "IdleLeft_carry"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 35 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=11]
resource_name = "IdleRight_carry"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=13]
resource_name = "IdleUp_carry"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=14]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=15]
resource_name = "RunDown_carry"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=16]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 34 ]
}

[sub_resource type="Animation" id=17]
resource_name = "RunLeft_carry"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=18]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=19]
resource_name = "RunRight_carry"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=20]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=21]
resource_name = "RunUp_carry"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19 ]
}

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IdleLeft"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "IdleDown"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "IdleRight"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=26]
blend_point_0/node = SubResource( 22 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 23 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 24 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 25 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
snap = Vector2( 0.01, 0.01 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "IdleDown_carry"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "IdleUp_carry"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "IdleRight_carry"

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "IdleLeft"

[sub_resource type="AnimationNodeBlendSpace2D" id=31]
blend_point_0/node = SubResource( 27 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 28 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 29 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 30 )
blend_point_3/pos = Vector2( -1, 0 )

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "RunLeft"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "RunDown"

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "RunRight"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "RunUp"

[sub_resource type="AnimationNodeBlendSpace2D" id=36]
blend_point_0/node = SubResource( 32 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 33 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 34 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 35 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "RunDown_carry"

[sub_resource type="AnimationNodeAnimation" id=38]
animation = "RunUp_carry"

[sub_resource type="AnimationNodeAnimation" id=39]
animation = "RunLeft_carry"

[sub_resource type="AnimationNodeAnimation" id=40]
animation = "RunRight_carry"

[sub_resource type="AnimationNodeBlendSpace2D" id=41]
blend_point_0/node = SubResource( 37 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 38 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 39 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 40 )
blend_point_3/pos = Vector2( 1, 0 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachine" id=50]
states/Idle/node = SubResource( 26 )
states/Idle/position = Vector2( 466.125, 93.8496 )
states/IdleCarry/node = SubResource( 31 )
states/IdleCarry/position = Vector2( 466.125, 181.85 )
states/Run/node = SubResource( 36 )
states/Run/position = Vector2( 662, 93.8496 )
states/RunCarry/node = SubResource( 41 )
states/RunCarry/position = Vector2( 662, 181.85 )
transitions = [ "Idle", "Run", SubResource( 42 ), "Run", "Idle", SubResource( 43 ), "Idle", "IdleCarry", SubResource( 44 ), "IdleCarry", "Idle", SubResource( 45 ), "Run", "RunCarry", SubResource( 46 ), "RunCarry", "Run", SubResource( 47 ), "RunCarry", "IdleCarry", SubResource( 48 ), "IdleCarry", "RunCarry", SubResource( 49 ) ]
start_node = "Idle"
graph_offset = Vector2( 0, 25.4324 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=51]

[sub_resource type="CircleShape2D" id=52]
radius = 31.7889

[sub_resource type="CapsuleShape2D" id=53]
radius = 14.699
height = 48.9292

[sub_resource type="CapsuleShape2D" id=54]
height = 39.967

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -21 )
texture = ExtResource( 2 )
hframes = 5
vframes = 8
frame = 34

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.445, 1 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackDown = SubResource( 2 )
anims/AttackLeft = SubResource( 3 )
anims/AttackRight = SubResource( 4 )
anims/AttackUp = SubResource( 5 )
anims/IdleDown = SubResource( 6 )
anims/IdleDown_carry = SubResource( 7 )
anims/IdleLeft = SubResource( 8 )
anims/IdleLeft_carry = SubResource( 9 )
anims/IdleRight = SubResource( 10 )
anims/IdleRight_carry = SubResource( 11 )
anims/IdleUp = SubResource( 12 )
anims/IdleUp_carry = SubResource( 13 )
anims/RunDown = SubResource( 14 )
anims/RunDown_carry = SubResource( 15 )
anims/RunLeft = SubResource( 16 )
anims/RunLeft_carry = SubResource( 17 )
anims/RunRight = SubResource( 18 )
anims/RunRight_carry = SubResource( 19 )
anims/RunUp = SubResource( 20 )
anims/RunUp_carry = SubResource( 21 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 50 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 51 )
parameters/Idle/blend_position = Vector2( -0.000819027, -0.00635839 )
parameters/IdleCarry/blend_position = Vector2( 0, 0 )
parameters/Run/blend_position = Vector2( -1, 0 )
parameters/RunCarry/blend_position = Vector2( 0, 0 )

[node name="LanternLight" type="Light2D" parent="."]
visible = false
position = Vector2( 0.354, -21 )
scale = Vector2( 1.53212, 1.53212 )
texture = ExtResource( 3 )
script = ExtResource( 4 )
flicker_range = Vector2( 0.95, 1 )
min_scale_multiplier = 0.97
min_flicker_delay = 0.05
chance_to_flicker = 0.3

[node name="DefaultLight" type="Light2D" parent="."]
position = Vector2( 0.139, -21 )
scale = Vector2( 0.728604, 0.728604 )
texture = ExtResource( 3 )
color = Color( 0.423529, 0, 0.611765, 1 )
energy = 0.7

[node name="DetectionRadius" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
position = Vector2( 0.111366, -9.04911 )
shape = SubResource( 52 )

[node name="InteractionRadius" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRadius"]
position = Vector2( 0, -2.19919 )
shape = SubResource( 53 )

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.297295, -8.1758 )
shape = SubResource( 54 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -5 )
current = true
zoom = Vector2( 0.7, 0.7 )

[connection signal="area_entered" from="InteractionRadius" to="." method="_on_InteractionRadius_area_entered"]
[connection signal="area_exited" from="InteractionRadius" to="." method="_on_InteractionRadius_area_exited"]
